--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
           </div>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li class="active"><a href="#">Search</a></li>
+                <li class="active"><a href="/">Search</a></li>
                 <li>@Html.ActionLink("About", "Index", "About")</li>
             </ul>
           </div>
