--- a/HotelOrTaxi/assets/css/bootstrap-responsive.css
+++ b/HotelOrTaxi/assets/css/bootstrap-responsive.css
@@ -35,7 +35,7 @@
   display: block;
   width: 100%;
   min-height: 30px;
-  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box;ba
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -1029,7 +1029,7 @@
   .navbar-inverse .nav-collapse .nav > li > a:focus,
   .navbar-inverse .nav-collapse .dropdown-menu a:hover,
   .navbar-inverse .nav-collapse .dropdown-menu a:focus {
-    background-color: #111111;
+    background-color: #810026;
   }
   .nav-collapse.in .btn-group {
     padding: 0;
