--- a/HotelOrTaxi/assets/css/bootstrap-responsive.css
+++ b/HotelOrTaxi/assets/css/bootstrap-responsive.css
@@ -35,7 +35,7 @@
   display: block;
   width: 100%;
   min-height: 30px;
-  -webkit-box-sizing: border-box;ba
+  -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
