--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -166,10 +166,10 @@ input[type="color"]:focus,
 button.btn, input.btn[type="submit"] {
 }
 
-.btn-holder { margin:0 auto; width:70%; min-width:30%; /* IE10 Consumer Preview */ background-image: -ms-linear-gradient(top, #D70000 0%, #F10000 100%); /* Mozilla Firefox */  background-image: -moz-linear-gradient(top, #D70000 0%, #F10000 100%); /* Opera */ background-image: -o-linear-gradient(top, #D70000 0%, #F10000 100%); /* Webkit (Safari/Chrome 10) */ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D70000), color-stop(1, #F10000)); /* Webkit (Chrome 11+) */ background-image: -webkit-linear-gradient(top, #D70000 0%, #F10000 100%); /* W3C Markup, IE10 Release Preview */ background-image: linear-gradient(to bottom, #D70000 0%, #F10000 100%); border:4px solid #FFF; border-radius:6px; box-shadow:0 0 4px #000000; }
+.btn-holder { margin:0 auto; width:95%; /* IE10 Consumer Preview */ background-image: -ms-linear-gradient(top, #D70000 0%, #F10000 100%); /* Mozilla Firefox */  background-image: -moz-linear-gradient(top, #D70000 0%, #F10000 100%); /* Opera */ background-image: -o-linear-gradient(top, #D70000 0%, #F10000 100%); /* Webkit (Safari/Chrome 10) */ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D70000), color-stop(1, #F10000)); /* Webkit (Chrome 11+) */ background-image: -webkit-linear-gradient(top, #D70000 0%, #F10000 100%); /* W3C Markup, IE10 Release Preview */ background-image: linear-gradient(to bottom, #D70000 0%, #F10000 100%); border:4px solid #FFF; border-radius:6px; box-shadow:0 0 4px #000000; }
 .btn-fight {
 	height:80px;
-	width:202px;
+	width:196px;
     cursor: pointer;
 	background:url(/assets/img/fight-button-text.png) no-repeat 6px 20px;
 	border:none;
