--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -8,16 +8,16 @@
 .grey { color:#999; }
 
 .search-results { padding:15px; }
+div#result-info { position:relative; margin-bottom:20px; padding:10px; width:98%; font-size:16px; text-align:center; background:#FFF; border-radius: 4px 4px 4px 4px; }
+    div#result-info span { font-size:16px; font-weight:bold; }
+.result-info-inner { margin:0 auto; width:100%; }
 .results-box { min-height:120px; }
-div#result-info { position:relative; margin-bottom:20px; padding:10px; width:350px; font-size:16px; text-align:center; background:#FFF; border-radius: 4px 4px 4px 4px; }
-div#result-info  span { font-size:16px; font-weight:bold; }
+.results-box span { display:block; }
+    span.subheadline { float:left; width:40%; margin-right:15px; font-size:14px; }
+    span.price { float:left; width:50%; font-size:52px; font-weight:bold; }
 .arrow-down { position:absolute; left:45px; top:60px; width:28px; height:10px; background: url(/assets/img/speechbubble-arrow.png) no-repeat bottom; }
 .search-results img { margin-right:25px; }
 .search-results span { vertical-align:middle; }
-
-.price { font-size:52px; font-weight:bold; }
-
-.subheadline { margin-right:15px; font-size:14px; }
 
 .red-button { float:right; margin-top:25px; padding-left:10px; width:200px; height:50px; font-size:26px; color:white; line-height:50px; text-decoration:none; background:red url(/assets/img/button-arrow.png) no-repeat 90%; border:solid 1px white; border-radius: 4px 4px 4px 4px; }
 .red-button:hover { color:white; text-decoration:none; }
@@ -167,14 +167,7 @@ button.btn, input.btn[type="submit"] {
 }
 
 .btn-holder { margin:0 auto; width:95%; /* IE10 Consumer Preview */ background-image: -ms-linear-gradient(top, #D70000 0%, #F10000 100%); /* Mozilla Firefox */  background-image: -moz-linear-gradient(top, #D70000 0%, #F10000 100%); /* Opera */ background-image: -o-linear-gradient(top, #D70000 0%, #F10000 100%); /* Webkit (Safari/Chrome 10) */ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D70000), color-stop(1, #F10000)); /* Webkit (Chrome 11+) */ background-image: -webkit-linear-gradient(top, #D70000 0%, #F10000 100%); /* W3C Markup, IE10 Release Preview */ background-image: linear-gradient(to bottom, #D70000 0%, #F10000 100%); border:4px solid #FFF; border-radius:6px; box-shadow:0 0 4px #000000; }
-.btn-fight {
-	height:80px;
-	width:196px;
-    cursor: pointer;
-	background:url(/assets/img/fight-button-text.png) no-repeat 6px 20px;
-	border:none;
-	margin:0 auto;
-}
+.btn-fight { margin:0 auto; width:196px; height:80px; background:url(/assets/img/fight-button-text.png) no-repeat 6px 20px; cursor: pointer; border:none; }
  
  .control-group {
 	 text-align:center;
