--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -15,7 +15,8 @@ div#result-info { position:relative; margin-bottom:20px; padding:10px; width:98%
 .results-box span { display:block; }
     .subheadline { float:left; width:40%; margin:0 0 10px 0; font-size:14px; }
     .price { float:left; width:55%; font-size:52px; font-weight:bold; }
-    .show-me { float:right; width:50%; }
+    .show-me-holder { float:right; width:50%; }
+.show-me { margin:0 auto; width: 212px; height: 53px; }
 .arrow-down { position:absolute; left:45px; top:60px; width:28px; height:10px; background: url(/assets/img/speechbubble-arrow.png) no-repeat bottom; }
 .results-box-img { float:left; margin-right:25px; }
 .search-results img { margin-right:0; }
@@ -130,7 +131,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 }
 
 .results-box {
-	min-height:150px;
+	min-height:164px;
 }
  
 .modal-fight {  background:#F3EDE0; width:100%; height:500px; background-image:url(/assets/img/fight-small.gif);  background-repeat:no-repeat; background-position:center;}
@@ -334,8 +335,11 @@ p.two { float:left; padding:10px 0 0 5px; width:304px; vertical-align:baseline; 
   p.two { width:207px; font-size:14px; }
 
   .subheadline { float:left; width:40%; margin:0 0 10px 0; font-size:14px; }
-  .price { float:left; width:46%; font-size:40px; font-weight:bold; }
-  .show-me { float:right; width:50%; }
+  .price { float:left; width:43%; font-size:32px; font-weight:bold; }
+  .show-me-holder { float:right; margin:10px 0 0; width:100%; }
+
+  .red-button {  margin-top:0;  }
+  .red-button:hover { color:white; text-decoration:none; }
 }
  
 @media (max-width: 979px) and (min-width: 710px){
