--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -5,6 +5,10 @@
 
 /* Results Page */
 
+body { font-family: 'Open Sans',sans-serif; background: #F3EDE0; }
+input, button, select, textarea { font-family: 'Open Sans', sans-serif; }
+html { font-size: 100%; }
+
 .grey { color:#999; }
 
 .search-results { padding:15px 0; }
@@ -30,8 +34,7 @@ div#result-info { position:relative; margin-bottom:20px; padding:10px; width:94%
 /*8888888*/
 
 
-body { background: #F3EDE0; }
-body, input, button, select, textarea { font-family: 'Open Sans', sans-serif; }
+
 .navbar-inverse .navbar-inner {
     background-color: red;
     background-image: linear-gradient(to bottom, #CF0000, #FF0000);
@@ -113,26 +116,10 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 /*888888*/
 
 /* Results Page */
-
-.search-results  img {
-	float:left;
-}
-
-.price {
-	margin-top:15px;
-}
-
-.price, .subheadline {
-	display:block;
-}
-
-.red-button {
-	/*float:left;*/
-}
-
-.results-box {
-	min-height:164px;
-}
+.search-results  img { float:left; }
+.price { margin-top:15px; }
+.price, .subheadline { display:block; }
+.results-box { min-height:164px; }
  
 .modal-fight {  background:#F3EDE0; width:100%; height:500px; background-image:url(/assets/img/fight-small.gif);  background-repeat:no-repeat; background-position:center;}
  
@@ -172,18 +159,12 @@ button.btn, input.btn[type="submit"] {
 .btn-holder { margin:0 auto; width:95%; /* IE10 Consumer Preview */ background-image: -ms-linear-gradient(top, #D70000 0%, #F10000 100%); /* Mozilla Firefox */  background-image: -moz-linear-gradient(top, #D70000 0%, #F10000 100%); /* Opera */ background-image: -o-linear-gradient(top, #D70000 0%, #F10000 100%); /* Webkit (Safari/Chrome 10) */ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D70000), color-stop(1, #F10000)); /* Webkit (Chrome 11+) */ background-image: -webkit-linear-gradient(top, #D70000 0%, #F10000 100%); /* W3C Markup, IE10 Release Preview */ background-image: linear-gradient(to bottom, #D70000 0%, #F10000 100%); border:4px solid #FFF; border-radius:6px; box-shadow:0 0 4px #000000; }
 .btn-fight { margin:0 auto; width:196px; height:80px; background:url(/assets/img/fight-button-text.png) no-repeat 6px 20px; cursor: pointer; border:none; }
  
- .control-group {
-	 text-align:center;
- }
+.control-group { text-align:center; }
 	 
+form { margin: 0 0 0px; }
 
-form {
-    margin: 0 0 0px;
-}
+.navbar .brand { padding: 5px 20px; }
 
-.navbar .brand {
-    padding: 5px 20px;
-}
 .steps-numbers p { font-style:italic; }
 
 /* PROMOTION HEADER - NEEDS CHANGING */
@@ -218,42 +199,15 @@ element.style {
     margin: 0 auto;
     width: 340px;
 }
-body {
-    font-family: 'Open Sans',sans-serif;
-}
 
-html {
-    font-size: 100%;
-}
 .btn:first-child {
 }
-.navbar-inverse .btn-navbar {
-    background-color: #810026;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
+.navbar-inverse .btn-navbar { color: #FFFFFF; text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #810026; }
 
-.navbar-inverse .btn-navbar {
-    background-color: red;
-    background-image: linear-gradient(to bottom, #CF0000, #FF0000);
-    background-repeat: repeat-x;
-    border-color:none;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
+.navbar-inverse .btn-navbar { color: #FFFFFF; text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25); background-color: red; background-image: linear-gradient(to bottom, #CF0000, #FF0000); background-repeat: repeat-x; border-color:none; }
 
-.arrow-down-bottom
-{
-    width: 100%;
-    height: 40px;
-}
-.arrow-down-bottom-img
-{
-    background: url("../../../assets/img/arrow-down.png") no-repeat 0 0;
-    height: 20px;
-    margin: 0 auto;
-    width: 49px;
-}
+.arrow-down-bottom { width: 100%; height: 40px; }
+.arrow-down-bottom-img { margin:0 auto; width:49px; height:20px; background:url("../../../assets/img/arrow-down.png") no-repeat 0 0; }
 
 @media (min-width: 1200px){
 	.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
