--- a/HotelOrTaxi/assets/css/searchresults.css
+++ b/HotelOrTaxi/assets/css/searchresults.css
@@ -47,7 +47,7 @@
 	.Happy { height:23px; padding:8px 0 0 38px; background:url("/assets/img/areas/searchresults/32px-faces.png") no-repeat 0 -66px;}
 	.NoReviews, .Acceptable, .Sad {display: none;}
 	
-.m-panel-results { position:relative; margin:15px 8px 10px; min-width:300px; height:185px; background:#FFF; border:3px solid red; -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px; box-shadow:0 0 5px #9a9a9a; }
+.m-panel-results { position:relative; margin:15px 8px 10px; min-width:300px; height:185px; background:#FFF; border:3px solid #FFF; -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px; box-shadow:0 0 5px #9a9a9a; }
 .hotel-image { display:inline-block; width:60%; height:180px; }
 .hotel-image .inner{ position:relative; float:left; width:100%; height:134px; overflow:hidden; -webkit-border-radius:7px 0 0 0; -moz-border-radius:7px 0 0 0; border-radius:7px 0 0 0; }
 .hotel-image img { width:100%; border:none; }
