--- a/HotelOrTaxi/assets/css/searchresults.css
+++ b/HotelOrTaxi/assets/css/searchresults.css
@@ -1,4 +1,8 @@
-﻿#hotel-distance { height:31px; background:url(/assets/img/areas/searchresults/map-pins.png) no-repeat -17px -161px; }
+﻿body {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+#hotel-distance { height:31px; background:url(/assets/img/areas/searchresults/map-pins.png) no-repeat -17px -161px; }
 #distanceHeader { margin:0 8px; padding:6px 0 5px 27px; font-size:15px; font-weight:bold; }
 #distanceHeader span { color:#9a9a9a; }
 .found-hotels { margin:10px 8px 10px; padding:5px 10px; font-size:12px; background:#FFF; border:1px solid #E3E5E4; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px; }
@@ -78,7 +82,7 @@ span.hotel-address { float:left; margin:0; padding:3px 0 0 6px; width:90%; heigh
 .m-panel-no-rooms span { display:block; margin:0 11px 0px 60px; color:#b8852c; font-weight:bold; }
 .no-rooms-faces { float:left; display:block; margin:0 0 0 15px; width:35px; height:45px; background: url(/assets/img/areas/hoteldetails/no-rooms-faces.png) -18px -63px no-repeat; }
 
-@media all and (min-width: 420px) and (max-width: 539px) {
+@media all and (min-width: 300px) and (max-width: 539px) {
  .hotel-image { height:134px; }
  .hotel-image  .inner{ height:134px; }
  .hotel-score strong { font-size:13px; line-height:1em; }
