--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -59,7 +59,8 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="/">Search</a></li>
-                <li>@Html.ActionLink("About", "Index", "About")</li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/terms">Terms</a></li>
             </ul>
           </div>
         </div>
