--- a/HotelOrTaxi/Views/About/Index.cshtml
+++ b/HotelOrTaxi/Views/About/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Or is it?</h3>
 
-<p>What if a taxi ride home isn’t the cheapest option?</p>
+<p>What if a taxi ride home isn't the cheapest option?</p>
 
 <p>What if, for the same price or less, <strong>you could spend the night in a comfortable hotel instead?</strong></p>
 
