--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
             <div class="span5">
                 <div class="control-group">
                     <div class="search-box-holder s-on s-on-change">
-                        <input type="text" disabled="disabled" id="from" placeholder="Current location" class="input-block-level" name="From">
+                        <input type="text" disabled="disabled" id="from" placeholder="Use current location" class="input-block-level" name="From">
                         <button id="change-location" type="button" value="change">Change</button>
                         <div id="find-my-loc"></div>
                     </div>
@@ -13,7 +13,7 @@
             </div>
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="to" placeholder="To" class="input-block-level" name="To">
+                    <input type="text" id="to" placeholder="To (postcode, street, town etc.)" class="input-block-level" name="To">
                 </div>
             </div>
         </div>
@@ -37,12 +37,15 @@
 <div id="moreinfo">
     <div style=" height:100px;" class="steps-numbers">
         <img style="float:left;" src="/assets/img/circle-1.png" alt="1" />
-        <p class="one">Tell us where you are and where you’re heading</p>
+        <p class="one">Tell us where you are and where you're heading</p>
     </div>
     <div style=" height:100px;"  class="steps-numbers">
-        <img style="float:right;" src="/assets/img/circle-2.png" alt="1" />
-        <p class="two">    We’ll pit local hotel deals against your taxi fare to find the best option
-        </p>
+        <img style="float:right;" src="/assets/img/circle-2.png" alt="2" />
+        <p class="two">    We'll pit local hotel deals against your taxi fare to find the best option</p>
+    </div>
+    <div style=" height:100px;"  class="steps-numbers">
+        <img style="float:left;" src="/assets/img/circle-3.png" alt="3" />
+        <p class="two">  Hotel or taxi – book whichever you choose </p>
     </div>
 </div>
 
