--- a/HotelOrTaxi/Views/Results/Fight.cshtml
+++ b/HotelOrTaxi/Views/Results/Fight.cshtml
@@ -2,7 +2,11 @@
     ViewBag.Title = "Fight";
 }
 
-<div class="modal-fight"></div>
+
+<div id="fight-holder">
+    <h2>Hotel and taxi are scrapping it out for your best deal...</h2>
+    <div class="modal-fight"></div>
+</div>
 
 @section Scripts {
     <script type="text/javascript" src="/assets/js/fight.js"></script>
