--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -5,7 +5,7 @@
     {
         <div id="result-info">
             <div class="result-info-inner">
-                <span>Hotel is &pound;@string.Format("{0:0.00}", Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
+                <span>Hotel is &pound;@string.Format("{0:0.00}", Model.PriceDifference) cheaper</span><br/>So now you can <strong><em>STAY</em></strong> – result!<div class="arrow-down"></div>
             </div>
         </div>
     }
