updating the copy

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -12,7 +12,7 @@
     @if (Model.IsDraw)
     {
         <div id="result-info">
-            <span>Why not stay?!<br /> It's the same price anyway!</span>
+            <span>Hotel is just as cheap…<br />So you might as well <b>stay</b></span>
             <div class="arrow-down"></div>
         </div>
     }
