--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -65,3 +65,11 @@
     });
     </script>
 }
+
+@section MetaTags{
+    <meta name="description" content="Should I stay or should I go now? Hotel vs Taxi is an all-in-one taxi fare calculator + cab + hotel finder. Why stop the Fun? Live your life Now!">
+}
+
+@section Title{
+    <title>Taxi Fare Calculator, Cab &amp; hotel finder | Hotel vs Taxi</title>
+}
