fix for home screen destination search

--- a/HotelOrTaxi/Views/Taxi/Index.cshtml
+++ b/HotelOrTaxi/Views/Taxi/Index.cshtml
@@ -6,3 +6,9 @@
 {
     <p> @taxi.Name <a href="@taxi.Number">@taxi.Number</a></p>
 }
+
+<div class="taxi-comp-holder">
+    <div class="taxi-name-holder"><h3>marcs taxis</h3></div>
+    <a href="/"><span class="taxi-phone-no">0151 546 4444</span></a>
+</div>
+
