--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -209,10 +209,13 @@ element.style {
 .arrow-down-bottom { width: 100%; height: 40px; }
 .arrow-down-bottom-img { margin:0 auto; width:49px; height:20px; background:url("../../../assets/img/arrow-down.png") no-repeat 0 0; }
 
+a.taxi-company { text-decoration:none; }
+.taxi-near-you-holder { position:relative; margin:20px 0; padding:6px 5px; background:#FFF; border-radius:4px 4px 4px 4px; }
+.taxi-near-you-holder h2 { font-size:28px; line-height:1em; text-align:center; color:#000; }
+.taxi-comp-holder { position:relative; margin-bottom:20px; padding:10px; font-size:17px; font-weight:bold; color:#999; text-align:center; background: #FFF; border-radius: 4px 4px 4px 4px; box-shadow:0 0 5px #9a9a9a; }
+.taxi-name-holder { padding:5px; width:100%; }
+.taxi-phone-no { padding:5px 0; width:100%; font-size:21px; font-weight:bold; color:#000; border:2px solid #dadada; border-radius:100px 100px 5px 5px; background-color:rgb(255, 143, 0); box-shadow:0 0 5px #000 inset; }
 
-.taxi-comp-holder { position:relative; margin-bottom:20px; padding:10px; width:94%; height:50px; font-size:16px; text-align:center; background: #FFF; border-radius: 4px 4px 4px 4px; }
-.taxi-name-holder { position: absolute; top:4px; left:0; width:50%; }
-.taxi-phone-no { display:block; float:right; padding:5px 0; width:50%; border:2px solid #F3EDE0; background-color:#fee6e6; }
 
 @media (min-width: 1200px){
 	.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
