--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -352,3 +352,23 @@ p.two { float:left; padding:10px 0 0 5px; width:304px; vertical-align:baseline; 
 #find-my-loc {
     cursor: pointer;
 }
+
+
+.cookie-table {
+    border:1px solid #dadada;
+    margin:0 0 50px 0;
+
+}
+
+.cookie-table-header {
+    border:1px solid #dadada;
+    
+}
+
+.cookie-type, .cookie-name { padding:5px; width:100px; border-right: 1px solid #dadada; }
+.cookie-purpose { padding:5px; border-right: 1px solid #dadada }
+.cookie-more { padding:5px; }
+
+.cookie-type-content, .cookie-name-content { padding:5px; text-align:center; vertical-align:top; border-right: 1px solid #dadada; }
+.cookie-purpose-content { border-right: 1px solid #dadada; }
+.cookie-purpose-content, .cookie-more-content { padding:5px 10px; vertical-align:top; }
