terms and conditions amend to cookie info

--- a/HotelOrTaxi/Views/Terms/Index.cshtml
+++ b/HotelOrTaxi/Views/Terms/Index.cshtml
@@ -222,24 +222,32 @@ LateRooms and/or its affiliates.</p>
 
 <p>Cookies are small files that are placed on your computer by websites that you visit. They are widely used in order to make websites work, or work more efficiently, as well as to provide information to the owners of the site. We use the following cookies for the reasons set out in the table below. </p>
 
-<table class="cookie-table">
-    <tr class="cookie-table-header">
-        <th class="cookie-type">Cookie Type</th>
-        <th class="cookie-name">Name</th>
-        <th class="cookie-purpose">Purpose</th>
-        <th class="cookie-more">More Information</th>
-    </tr>
-    <tr>
-        <td class="cookie-type-content">Google Analytics</td>
-        <td class="cookie-name-content">_ga</td>
-        <td class="cookie-purpose-content">
+<div class="cookie-box-holder">
+    <div class="cookie-box-type-outer">
+        <div class="cookie-box-type">Cookie Type</div>
+        <div class="cookie-box-type-bottom">Google Analytics</div>
+    </div>
+    <div class="cookie-box-name-outer">
+        <div class="cookie-box-name">Name</div>
+        <div class="cookie-box-name-bottom">_ga</div>
+    </div>
+    <div class="cookie-box-purpose-outer">
+        <div class="cookie-box-purpose">Purpose</div>
+        <div class="cookie-box-purpose-bottom">
+            <p>
             These cookies monitor the traffic volumes to the Site to allow us to understand how the Site is working and fix any problems. This ensures that the Site is fully functional and optimised to create the best possible user experience.
             The cookies collect information in an anonymous form, including the number of visitors to our Site, where visitors have come to our Site from and the pages they visited. The information collected by the cookie may be stored outside the European Economic Area including but not limited to in the United States of America.  The cookie typically lasts for 2 years. 
             To opt-out of receiving these cookies please see Google's privacy policy at: <a href="http://www.google.com/privacypolicy.html">www.google.com/privacypolicy.html</a> or visit <a href="http://tools.google.com/dlpage/gaoptout">tools.google.com/dlpage/gaoptout</a>.
-        </td>
-        <td class="cookie-more-content">
-            For more information on Google analytics please see <a href="www.google.com/intl/en/analytics/privacyoverview.html">www.google.com/intl/en/analytics/privacyoverview.html</a>
-            To see Google’s privacy policy please see <a href="www.google.com/intl/en/privacy/privacy-policy.html">www.google.com/intl/en/privacy/privacy-policy.html</a>.
-        </td>
-    </tr>
-</table>
+            </p>
+        </div>
+    </div>
+    <div class="cookie-box-info-outer">
+        <div class="cookie-box-info">More Information</div>
+        <div class="cookie-box-info-bottom">
+            <p>
+            For more information on Google analytics please see <br /> <a href="www.google.com/intl/en/analytics/privacyoverview.html">www.google.com/intl/en/analytics/privacyoverview.html</a> <br />
+            To see Google’s privacy policy please see <br /> <a href="www.google.com/intl/en/privacy/privacy-policy.html">www.google.com/intl/en/privacy/privacy-policy.html</a>.
+            </p>
+        </div>
+    </div>
+</div>
