--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -46,6 +46,14 @@
         }
 
         document.onkeypress = stopRKey;
+        
+        var a = document.getElementsByTagName("a");
+        for (var i = 0; i < a.length; i++) {
+            a[i].onclick = function() {
+                window.location = this.getAttribute("href");
+                return false;
+            };
+        }
 
     </script>
   </head>
