--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -121,7 +121,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .price, .subheadline { display:block; }
 .results-box { min-height:164px; }
  
-.modal-fight {  background:#F3EDE0; width:100%; height:500px; background-image:url(/assets/img/fight-small.gif);  background-repeat:no-repeat; background-position:center;}
+.modal-fight {  background:#F3EDE0; width:100%; height:500px; background-image:url(/assets/img/fight-small.gif);  background-repeat:no-repeat; background-position: center top;}
  
 }
 
