--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -119,7 +119,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .search-results  img { float:left; }
 .price { margin-top:15px; }
 .price, .subheadline { display:block; }
-.results-box { min-height:164px; }
+.results-box { /*min-height:164px;*/ }
  
 .modal-fight {  background:#F3EDE0; width:100%; height:500px; background-image:url(/assets/img/fight-small.gif);  background-repeat:no-repeat; background-position: center top;}
  
@@ -297,11 +297,11 @@ p.two { float:left; padding:10px 0 0 5px; width:304px; vertical-align:baseline; 
   p.two { width:207px; font-size:14px; }
 
   .results-box-img { margin-right:15px; }
-  .subheadline { float:left; width:40%; margin:10px 0 0 0; font-size:13px; }
-  .price { float:left; width:45%; font-size:32px; font-weight:bold; }
-  .show-me-holder { float: left; margin: 20px 0 0; width: auto; }
+  .subheadline { float:left; width:40%; margin:0; font-size:13px; }
+  .price { float:left; width:45%; font-size:32px; font-weight:bold;margin-top: 6px;}
+  .show-me-holder { float: left; margin: 11px 0 0; width: 180px; }
   .show-me { width: auto; }
-  .red-button {  margin-top:0;font-size: 16px;float: left;width: 100px;  }
+  .red-button {  margin-top:0;float: left;width: 180px;  }
   .red-button:hover { color:white; text-decoration:none; }
 }
  
@@ -388,4 +388,5 @@ p.two { float:left; padding:10px 0 0 5px; width:304px; vertical-align:baseline; 
 
 @media (min-width: 320px) and (max-width: 479px) {
 	.cookie-box-purpose-bottom a, .cookie-box-info-bottom a { font-size:10px; }
+
 }
